# SerialHelper

./: .gitignore  CMakeLists.txt  README.md
files/: request-template.txt  response-template.txt
include/messaging/: field.hh  message_template.hh
include/serial-wrapper/: raw_serial_wrapper.hh  serial_settings.hh  serial_wrapper.hh
include/utils/: crc16.hh
src/: main.cc
src/messaging/: message_template.cc
src/messaging/fields/: bitmask_field.cc  byte_field.cc  crc16_field.cc  field.cc  int16_field.cc  int8_field.cc
src/serial-wrapper/: raw_serial_wrapper.cc
src/utils/: crc16.cc
